feat: update v2 with simple version